@@ -1,6 +1,10 @@
 MEDIA_TYPE = netboot image
 
-TARGET = $(INITRD) $(KERNEL)
+# How big a floppy image should I make? (in kilobytes)
+# Needed for the MINIISO.
+FLOPPY_SIZE = 2880
+
+TARGET = $(INITRD) $(KERNEL) $(BOOT) $(MINIISO)
 EXTRANAME = $(MEDIUM)/
 
 # FIXME: Temporary fix, these files should be in a udeb!
